# CodeAnswer

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: default.yaml
docs/: EXPERIMENTS.md
results/: experiment_summary.json  retrieval_comparison.csv
scripts/: ask_codeanswer.py  build_corpus.py  build_flat_index.py  build_optimized_index.py  compare_retrievers.py  evaluate_retrieval.py  generate_embeddings.py
src/codeanswer/: __init__.py  comparison.py  config.py  data.py  embeddings.py  evaluation.py  indexing.py  optimization.py  rag.py  reranking.py
tests/: test_comparison.py  test_data.py  test_embeddings.py  test_evaluation.py  test_indexing.py  test_optimization.py  test_rag.py  test_reranking.py
