[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeanswer"
version = "0.1.0"
description = "Semantic search and citation-grounded RAG for programming questions"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Abdulloh" }
]

dependencies = [
    "duckdb>=1.3,<2",
    "faiss-cpu>=1.11,<2",
    "joblib>=1.4,<2",
    "numpy>=2.0,<2.4",
    "pandas>=2.2,<3",
    "pyarrow>=17,<22",
    "PyYAML>=6,<7",
    "requests>=2.32,<3",
    "scikit-learn>=1.6,<2",
    "sentence-transformers>=5,<6",
    "torch>=2.5,<3",
    "tqdm>=4.66,<5"
]

[project.optional-dependencies]
download = [
    "kagglehub==1.0.2",
    "kagglesdk==0.1.23"
]

app = [
    "streamlit>=1.40,<1.52",
    "packaging<26",
    "protobuf<7"
]

dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "ruff>=0.12,<1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
